Revert "Update custom.toml"
This reverts commit 6501a4422b31b810c0f7d2e6c6c077f3f26fae33.

--- a/data/themes/custom.toml
+++ b/data/themes/custom.toml
@@ -6,10 +6,10 @@ light = true
 
 # Primary
 # primary = "#002d72"
-primary = "#280067"
+primary = "#9900ff"
 
 # Menu
-menu_primary = "#280067" # 500
+menu_primary = "#9900ff" # 500
 menu_text = "#80bfff"
 menu_text_active = "#C4BBD2" # A100
 menu_title = "#fff"
