--- a/data/themes/custom.toml
+++ b/data/themes/custom.toml
@@ -5,10 +5,10 @@ name = "Custom"
 light = true
 
 # Primary
-primary = "#4c439c"
+primary = "#483D8B"
 
 # Menu
-menu_primary = "#4c439c" # 500
+menu_primary = "#483D8B" # 500
 menu_text = "#fff"
 menu_text_active = "#FFB300" # A100
 menu_title = "#fff"
