--- a/data/fonts/custom.toml
+++ b/data/fonts/custom.toml
@@ -5,7 +5,7 @@ name = "Custom"
 google_fonts = "IBM Plex:400,700|IBM Plex:400,400italic,700|IBM Plex+Mono"
 
 # Font families
-heading_font = "IBM Plex"
-body_font = "IBM Plex"
-nav_font = "IBM Plex"
+heading_font = "Montserrat"
+body_font = "Montserrat"
+nav_font = "Montserrat"
 mono_font = "IBM Plex Mono"
