--- a/data/themes/custom.toml
+++ b/data/themes/custom.toml
@@ -8,7 +8,7 @@ light = true
 primary = "#483D8B"
 
 # Menu
-menu_primary = "#1E4356" # 500  #483D8B
+menu_primary = "#483D8B" # 500
 menu_text = "#fff"
 menu_text_active = "#FFB300" # A100
 menu_title = "#fff"
