--- a/data/fonts/custom.toml
+++ b/data/fonts/custom.toml
@@ -10,7 +10,7 @@ name = "Custom"
 # nav_font = "IBM Plex"
 # mono_font = "IBM Plex Mono"
 
-heading_font = "Leelawadee"
-body_font = "Leelawadee"
-nav_font = "Leelawadee"
-mono_font = "Leelawadee"
+heading_font = "Trebuchet MS"
+body_font = "Trebuchet MS"
+nav_font = "Trebuchet MS"
+mono_font = "Trebuchet MS"
