--- a/data/themes/custom.toml
+++ b/data/themes/custom.toml
@@ -5,10 +5,12 @@ name = "Custom"
 light = true
 
 # Primary
-primary = "#483d8b" #purple
+# primary = "#483d8b" #purple
+
+primary = "#2a2938" #purple
 
 # Menu
-menu_primary = "#483d8b" # header, purple
+menu_primary = "#2a2938" # header, purple
 menu_text = "#fff"
 menu_text_active = "#FFB300" # A100, orange
 menu_title = "#fff"
