--- a/data/themes/custom.toml
+++ b/data/themes/custom.toml
@@ -7,10 +7,10 @@ light = true
 # Primary
 # primary = "#483d8b" #purple
 
-primary = "#483d8b" #purple
+primary = "#3f3579" #purple
 
 # Menu
-menu_primary = "#2a2938" # header, purple
+menu_primary = "#3f3579" # header, purple
 menu_text = "#fff"
 menu_text_active = "#FFB300" # A100, orange
 menu_title = "#fff"
