--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -114,7 +114,7 @@ appointment_url = "" # "https://calendly.com"
 contact_links = [
   {icon = "twitter", icon_pack = "fab", name = "Twitter", link = "https://twitter.com/panaousis"},
   {icon = "google-scholar", icon_pack = "ai", name = "Google Scholar", link = "https://scholar.google.co.uk/citations?hl=en&user=FRwRt24AAAAJ&view_op=list_works&sortby=pubdate"},
-  {icon = "researchgate", icon_pack = "ai", name = "ResearchGate", link = "https://www.researchgate.net/profile/Emmanouil_Panaousis"}
+  {icon = "researchgate", icon_pack = "ai", name = "ResearchGate", link = "https://www.researchgate.net/profile/Emmanouil_Panaousis"},
   {icon = "linkedin", icon_pack = "ai", name = "LinkedIn", link = "https://www.linkedin.com/in/manospanaousis/"}
   ]
   # {icon = "skype", icon_pack = "fab", name = "Skype Me", link = "skype:echo123?call"},
