--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -127,10 +127,10 @@ contact_links = [
 ############################
 
 # Default image for social sharing and search engines. Place image in `static/media/` folder and specify image name here.
-sharing_image = ""
+sharing_image = "manos.jpeg"
 
 # Twitter username (without @). Used when a visitor shares your site on Twitter.
-twitter = ""
+twitter = "panaousis"
 
 ############################
 ## Regional Settings
