--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -184,7 +184,7 @@ plugins_js  = []
   gravatar = false
 
   # Choose a shape for avatar images. Options: circle, square.
-  shape = "circle"
+  #shape = "circle"
 
 # Available address formats.
 [address_formats]
@@ -274,7 +274,7 @@ plugins_js  = []
   #   2: OpenStreetMap (Mapnik)
   #   3: OpenStreetMap (Mapbox)
   engine = 2
-  api_key = ""
+  #api_key = ""
   zoom = 15
 
 ############################
