--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -97,7 +97,7 @@ address = {street = "Old Royal Naval College, Room 524", city = "Greenwich", reg
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
-#coordinates = {latitude = "51.4844", longitude = "0.0039"}
+coordinates = {latitude = "51.4844", longitude = "0.0039"}
 
 # Directions for visitors to locate you.
 directions = "" # "Enter Building 1 and take the stairs to Office 200 on Floor 2"
@@ -115,184 +115,184 @@ contact_links = [
   {icon = "twitter", icon_pack = "fab", name = "Twitter", link = "https://twitter.com/panaousis"},
   {icon = "google-scholar", icon_pack = "ai", name = "Google Scholar", link = "https://scholar.google.co.uk/citations?hl=en&user=FRwRt24AAAAJ&view_op=list_works&sortby=pubdate"},
   {icon = "researchgate", icon_pack = "ai", name = "ResearchGate", link = "https://www.researchgate.net/profile/Emmanouil_Panaousis"},
-  {icon = "linkedin-in", icon_pack = "ai", name = "LinkedIn", link = "https://www.linkedin.com/in/manospanaousis/"}
+  {icon = "linkedin-in", icon_pack = "ai", name = "LinkedIn", link = "https://www.linkedin.com/in/manospanaousis/"},
   ]
 
 
-############################
-## Social
-############################
+  ############################
+  ## Social
+  ############################
 
-# Default image for social sharing and search engines. Place image in `static/media/` folder and specify image name here.
-sharing_image = "manos.jpeg"
+  # Default image for social sharing and search engines. Place image in `static/media/` folder and specify image name here.
+  sharing_image = ""
 
-# Twitter username (without @). Used when a visitor shares your site on Twitter.
-twitter = "panaousis"
+  # Twitter username (without @). Used when a visitor shares your site on Twitter.
+  twitter = ""
 
-############################
-## Regional Settings
-############################
+  ############################
+  ## Regional Settings
+  ############################
 
-# Date and time format (refer to https://sourcethemes.com/academic/docs/customization/#date-format )
-#   Examples: "Mon, Jan 2, 2006" or "2006-01-02"
-date_format = "Jan 2, 2006"
-#   Examples: "3:04 pm" or "15:04"
-time_format = "3:04 PM"
-
-# Address format (choose from the [address_formats] list below or add you own to the list).
-address_format = "en-uk"
-
-############################
-## Advanced
-############################
-
-# Main menu alignment (l = left, c = center, r = right) and logo options.
-main_menu = {align = "l", show_logo = true, highlight_active_link = true, show_language = false}
-
-# Show estimated reading time for posts? (true/false)
-reading_time = true
-
-# Display next/previous section pager? (true/false)
-section_pager = false
-docs_section_pager = true  # Display pager in Docs layout (e.g. tutorials)?
-
-# Enable in-built social sharing buttons? (true/false)
-sharing = true
-
-# Show a copyright license from creativecommons.org in the site footer?
-# Page specific copyright licenses are also possible by adding this option to a page's front matter.
-copyright_license = {enable = false, allow_derivatives = false, share_alike = true, allow_commercial = false, notice = "This work is licensed under {license}"}
-
-# Highlight the site author (superuser) in author lists? (true/false)
-highlight_superuser = false
-
-# Link authors to their profile page? (true/false)
-link_authors = true
-
-# Abstract length (characters) in the Compact and Portfolio Card list views. Also, see `summaryLength` in `config.toml`.
-abstract_length = 135
-
-# Load JS plugins
-#   E.g. To load `/assets/js/custom.js`, set `plugins_js = ["custom"]`.
-plugins_js  = []
-
-# Avatars.
-# An avatar is an image that appears next to a user's name.
-# An avatar can be uploaded as an image named `avatar` to each user's profile or fetched from Gravatar.com.
-[avatar]
-  # Get user avatars from Gravatar.com? (true/false)
-  gravatar = false
-
-  # Choose a shape for avatar images. Options: circle, square.
-  shape = "circle"
-
-# Available address formats.
-[address_formats]
-  en-us = {order = ['street', 'city', 'region', 'postcode'], delimiters = [', ', ', ', ' ', '']}
-  en-gb = {order = ['street', 'city', 'region', 'postcode'], delimiters = [', ', ', ', ', ', '']}
-  de = {order = ['street', 'postcode', 'city'], delimiters = ['<br>', ' ', '']}
-  fr-fr = {order = ['street', 'postcode', 'city'], delimiters = ['<br>', ' ', '']}
-  zh = {order = ['postcode', 'region', 'city', 'street'], delimiters = [' ', ' ', ' ', '']}
-
-# Configuration of publication pages.
-[publications]
-  # Date format (refer to https://sourcethemes.com/academic/docs/customization/#date-format )
+  # Date and time format (refer to https://sourcethemes.com/academic/docs/customization/#date-format )
   #   Examples: "Mon, Jan 2, 2006" or "2006-01-02"
-  date_format = "January 2006"
+  date_format = "Jan 2, 2006"
+  #   Examples: "3:04 pm" or "15:04"
+  time_format = "3:04 PM"
 
-  # Citation style ("apa" or "mla")
-  citation_style = "apa"
+  # Address format (choose from the [address_formats] list below or add you own to the list).
+  address_format = "en-us"
 
-# Configuration of project pages.
-[projects]
-  # Views for associated content.
-  #   1: List
-  #   2: Compact
-  #   3: Card
-  #   4: Citation (publications only)
-  post_view = 2
-  publication_view = 4
-  talk_view = 2
+  ############################
+  ## Advanced
+  ############################
 
-############################
-## Comments
-############################
-[comments]
-  # Comment provider:
-  #   0: Disabled
-  #   1: Disqus (https://disqus.com)
-  #   2: Commento (https://commento.io)
-  engine = 0
+  # Main menu alignment (l = left, c = center, r = right) and logo options.
+  main_menu = {align = "l", show_logo = true, highlight_active_link = true, show_language = false}
 
-  # Which page types are commentable?
-  commentable = {page = true, post = true, docs = true, project = true, publication = true, talk = true}
+  # Show estimated reading time for posts? (true/false)
+  reading_time = true
 
-  # Configuration of Disqus.
-  [comments.disqus]
-    shortname = ""  # Paste the shortname from your Disqus dashboard.
-    show_count = true  # Show comment count in page header? (true/false)
+  # Display next/previous section pager? (true/false)
+  section_pager = false
+  docs_section_pager = true  # Display pager in Docs layout (e.g. tutorials)?
 
-  # Configuration of Commento.
-  [comments.commento]
-    # If self-hosting Commento, enter its URL here (e.g. "https://commento.?.com"), otherwise leave empty.
-    url = ""
+  # Enable in-built social sharing buttons? (true/false)
+  sharing = true
 
-############################
-## Search
-############################
-[search]
-  # Search provider:
-  #   0: No search engine
-  #   1: Academic (built-in)
-  #   2: Algolia (https://www.algolia.com)
-  engine = 1
+  # Show a copyright license from creativecommons.org in the site footer?
+  # Page specific copyright licenses are also possible by adding this option to a page's front matter.
+  copyright_license = {enable = false, allow_derivatives = false, share_alike = true, allow_commercial = false, notice = "This work is licensed under {license}"}
 
-  # Configuration of Algolia search engine.
-  # Paste the values from your Algolia dashboard.
-  [search.algolia]
-    app_id = ""
+  # Highlight the site author (superuser) in author lists? (true/false)
+  highlight_superuser = false
+
+  # Link authors to their profile page? (true/false)
+  link_authors = true
+
+  # Abstract length (characters) in the Compact and Portfolio Card list views. Also, see `summaryLength` in `config.toml`.
+  abstract_length = 135
+
+  # Load JS plugins
+  #   E.g. To load `/assets/js/custom.js`, set `plugins_js = ["custom"]`.
+  plugins_js  = []
+
+  # Avatars.
+  # An avatar is an image that appears next to a user's name.
+  # An avatar can be uploaded as an image named `avatar` to each user's profile or fetched from Gravatar.com.
+  [avatar]
+    # Get user avatars from Gravatar.com? (true/false)
+    gravatar = false
+
+    # Choose a shape for avatar images. Options: circle, square.
+    shape = "circle"
+
+  # Available address formats.
+  [address_formats]
+    en-us = {order = ['street', 'city', 'region', 'postcode'], delimiters = [', ', ', ', ' ', '']}
+    en-gb = {order = ['street', 'city', 'region', 'postcode'], delimiters = [', ', ', ', ', ', '']}
+    de = {order = ['street', 'postcode', 'city'], delimiters = ['<br>', ' ', '']}
+    fr-fr = {order = ['street', 'postcode', 'city'], delimiters = ['<br>', ' ', '']}
+    zh = {order = ['postcode', 'region', 'city', 'street'], delimiters = [' ', ' ', ' ', '']}
+
+  # Configuration of publication pages.
+  [publications]
+    # Date format (refer to https://sourcethemes.com/academic/docs/customization/#date-format )
+    #   Examples: "Mon, Jan 2, 2006" or "2006-01-02"
+    date_format = "January 2006"
+
+    # Citation style ("apa" or "mla")
+    citation_style = "apa"
+
+  # Configuration of project pages.
+  [projects]
+    # Views for associated content.
+    #   1: List
+    #   2: Compact
+    #   3: Card
+    #   4: Citation (publications only)
+    post_view = 2
+    publication_view = 4
+    talk_view = 2
+
+  ############################
+  ## Comments
+  ############################
+  [comments]
+    # Comment provider:
+    #   0: Disabled
+    #   1: Disqus (https://disqus.com)
+    #   2: Commento (https://commento.io)
+    engine = 0
+
+    # Which page types are commentable?
+    commentable = {page = true, post = true, docs = true, project = true, publication = true, talk = true}
+
+    # Configuration of Disqus.
+    [comments.disqus]
+      shortname = ""  # Paste the shortname from your Disqus dashboard.
+      show_count = true  # Show comment count in page header? (true/false)
+
+    # Configuration of Commento.
+    [comments.commento]
+      # If self-hosting Commento, enter its URL here (e.g. "https://commento.?.com"), otherwise leave empty.
+      url = ""
+
+  ############################
+  ## Search
+  ############################
+  [search]
+    # Search provider:
+    #   0: No search engine
+    #   1: Academic (built-in)
+    #   2: Algolia (https://www.algolia.com)
+    engine = 1
+
+    # Configuration of Algolia search engine.
+    # Paste the values from your Algolia dashboard.
+    [search.algolia]
+      app_id = ""
+      api_key = ""
+      index_name = ""
+      show_logo = false
+
+  ############################
+  ## Maps
+  ############################
+  [map]
+    # To show your address on a map in the Contact widget, enter your latitude and longitude (above)
+    # and choose a map provider below.
+    #
+    # To use Google Maps, set `engine` to 1 and enter your API key that can be obtained here:
+    #   https://developers.google.com/maps/documentation/javascript/get-api-key
+    # To use OpenStreetMap tiles, set `engine` to 2.
+    # To use OpenStreetMap on a high traffic site, set `engine` to 3 and enter your API key that can be obtained here:
+    #   https://www.mapbox.com/studio/account/tokens
+    #
+    # Map provider:
+    #   0: No map
+    #   1: Google Maps
+    #   2: OpenStreetMap (Mapnik)
+    #   3: OpenStreetMap (Mapbox)
+    engine = 2
     api_key = ""
-    index_name = ""
-    show_logo = false
+    zoom = 15
 
-############################
-## Maps
-############################
-[map]
-  # To show your address on a map in the Contact widget, enter your latitude and longitude (above)
-  # and choose a map provider below.
-  #
-  # To use Google Maps, set `engine` to 1 and enter your API key that can be obtained here:
-  #   https://developers.google.com/maps/documentation/javascript/get-api-key
-  # To use OpenStreetMap tiles, set `engine` to 2.
-  # To use OpenStreetMap on a high traffic site, set `engine` to 3 and enter your API key that can be obtained here:
-  #   https://www.mapbox.com/studio/account/tokens
-  #
-  # Map provider:
-  #   0: No map
-  #   1: Google Maps
-  #   2: OpenStreetMap (Mapnik)
-  #   3: OpenStreetMap (Mapbox)
-  engine = 2
-  api_key = ""
-  zoom = 15
+  ############################
+  ## Marketing
+  ############################
+  [marketing]
+    google_analytics = ""
+    google_tag_manager = ""
 
-############################
-## Marketing
-############################
-#[marketing]
-  #google_analytics = ""
-  google_tag_manager = ""
+  ############################
+  ## Content Management System
+  ############################
+  [cms]
+    # See https://sourcethemes.com/academic/docs/install/#install-with-web-browser
+    netlify_cms = true
 
-############################
-## Content Management System
-############################
-[cms]
-  # See https://sourcethemes.com/academic/docs/install/#install-with-web-browser
-  netlify_cms = true
-
-############################
-## Icon Pack Extensions
-############################
-[icon.pack]
-  ai = true  # Academicons icon pack https://jpswalsh.github.io/academicons/
+  ############################
+  ## Icon Pack Extensions
+  ############################
+  [icon.pack]
+    ai = true  # Academicons icon pack https://jpswalsh.github.io/academicons/
