--- a/data/themes/custom.toml
+++ b/data/themes/custom.toml
@@ -11,7 +11,7 @@ primary = "#3f3579" #purple
 
 # Menu
 #menu_primary = "#3f3579" # header, purple
-menu_primary = "#fff"" # header, UoG colour
+menu_primary = "#2E3E80"" # header, UoG colour
 menu_text = "#fff"
 menu_text_active = "#FFB300" # A100, orange
 
