--- a/data/themes/custom.toml
+++ b/data/themes/custom.toml
@@ -7,8 +7,7 @@ light = true
 # Primary
 # primary = "#483d8b" #purple
 
-#primary = "#3f3579" #purple
-primary = "#2E3E80" #purple
+primary = "#3f3579" #purple
 
 # Menu
 #menu_primary = "#3f3579" # header, purple
