--- a/data/themes/custom.toml
+++ b/data/themes/custom.toml
@@ -5,10 +5,9 @@ name = "Custom"
 light = true
 
 # Primary
-# primary = "#483d8b" #purple
-
-primary = "#3f3579" #purple
-menu_primary = "#3f3579" # header, purple
+# primary = "#3f3579" #purple
+primary = "#434e78" #blue
+menu_primary = "#3f3579"
 menu_text = "#fff"
 menu_text_active = "#FFB300" # A100, orange
 menu_title = "#fff"
