--- a/data/themes/custom.toml
+++ b/data/themes/custom.toml
@@ -7,7 +7,7 @@ light = true
 # Primary
 # primary = "#3f3579" #purple
 primary = "#434e78" #blue
-menu_primary = "#3f3579"
+menu_primary = "#434e78"
 menu_text = "#fff"
 menu_text_active = "#FFB300" # A100, orange
 menu_title = "#fff"
