--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -26,17 +26,22 @@
 [[main]]
   name = "CV"
   url = "#experience"
-  weight = 50
+  weight = 40
+
+[[main]]
+  name = "Service"
+  url = "#experience"
+  weight = 45
 
 [[main]]
   name = "Teaching"
   url = "#teaching"
-  weight = 55
+  weight = 50
 
 [[main]]
   name = "Contact"
   url = "#contact"
-  weight = 60
+  weight = 55
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
