--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -25,7 +25,7 @@
 
 [[main]]
   name = "CV"
-  url = "#experience"
+  url = "#files/cv.pdf"
   weight = 40
 
 [[main]]
@@ -37,10 +37,4 @@
   name = "Contact"
   url = "#contact"
   weight = 55
-
-# Link to a PDF of your resume/CV from the menu.
-# To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
-# [[main]]
-#    name = "CV"
-#    url = "files/cv.pdf"
-#    weight = 70
+df
