--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -24,9 +24,9 @@
   weight = 30
 
 [[main]]
-  name = "CV"
-  url = "#files/cv.pdf"
-  weight = 40
+  name = "Service"
+  url = "#service"
+  weight = 45
 
 [[main]]
   name = "Teaching"
