--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -140,7 +140,7 @@ contact_links = [
   time_format = "3:04 PM"
 
   # Address format (choose from the [address_formats] list below or add you own to the list).
-  address_format = "en-us"
+  address_format = "en-uk"
 
   ############################
   ## Advanced
@@ -211,7 +211,7 @@ contact_links = [
     #   3: Card
     #   4: Citation (publications only)
     post_view = 1
-    publication_view = 1
+    publication_view = 2
     talk_view = 1
 
   ############################
