--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -201,7 +201,7 @@ contact_links = [
     date_format = "January 2006"
 
     # Citation style ("apa" or "mla")
-    citation_style = "mla"
+    citation_style = "apa"
 
   # Configuration of project pages.
   [projects]
