--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -15,7 +15,8 @@
 
 [[main]]
   name = "Publications"
-  url = "#publications"
+  #url = "#publications"
+  url = "#featured"
   weight = 20
 
 [[main]]
