--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -16,7 +16,7 @@
 [[main]]
   name = "Publications"
   #url = "#publications"
-  url = "#featured"
+  url = "#publications"
   weight = 20
 
 [[main]]
