--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -20,6 +20,12 @@
   weight = 20
 
 [[main]]
+  name = "Experience"
+  #url = "#publications"
+  url = "#experience"
+  weight = 23
+
+[[main]]
   name = "Service"
   url = "#service"
   weight = 25
